Add interactive ESP list details
